@@ -64,6 +64,11 @@ CSRCS	+= nsh_lpc214x.c
 CFLAGS	+= -DCONFIG_EXAMPLES_NSH_ARCHINIT=1
 endif
 
+ifeq ($(CONFIG_ARCH_CHIP),lm3s)
+CSRCS	+= nsh_lm3s.c
+CFLAGS	+= -DCONFIG_EXAMPLES_NSH_ARCHINIT=1
+endif
+
 AOBJS	= $(ASRCS:.S=$(OBJEXT))
 COBJS	= $(CSRCS:.c=$(OBJEXT))
 
