@@ -729,4 +729,5 @@
 	  Micromint Eagle100 board.
 	* Documentation/NuttxPortingGuide.html: Added a section on NuttX device drivers.
 	* arch/arm/src/lm3s: Added an SSI driver for the LM3S6918
+	* examples/nsh: Added MMC/SD support for the LM3S6918
 
